@@ -12,6 +12,7 @@ it
 ja
 nl
 pl
+pt_BR
 ro
 sr
 uk
