@@ -1,0 +1,334 @@
+# Brazilian Portuguese translation for libidn.
+# Copyright (C) 2014 Free Software Foundation, Inc.
+# Copyright (C) 2014 Simon Josefsson
+# This file is distributed under the same license as the libidn package.
+# Rafael Ferreira <rafael.f.f1@gmail.com>, 2014.
+#
+msgid ""
+msgstr ""
+"Project-Id-Version: libidn 1.27\n"
+"Report-Msgid-Bugs-To: bug-libidn@gnu.org\n"
+"POT-Creation-Date: 2013-06-05 21:59+0200\n"
+"PO-Revision-Date: 2014-02-04 23:46-0300\n"
+"Last-Translator: Rafael Ferreira <rafael.f.f1@gmail.com>\n"
+"Language-Team: Brazilian Portuguese <ldpbr-translation@lists.sourceforge.net>\n"
+"Language: pt_BR\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
+"X-Generator: Poedit 1.6.3\n"
+
+#: lib/strerror-idna.c:82 lib/strerror-pr29.c:66 lib/strerror-punycode.c:66
+#: lib/strerror-stringprep.c:86 lib/strerror-tld.c:68
+msgid "Success"
+msgstr "Sucesso"
+
+#: lib/strerror-idna.c:86 lib/strerror-pr29.c:74
+msgid "String preparation failed"
+msgstr "Preparação de string falhou"
+
+#: lib/strerror-idna.c:90
+msgid "Punycode failed"
+msgstr "Punycode falhou"
+
+#: lib/strerror-idna.c:94
+msgid "Non-digit/letter/hyphen in input"
+msgstr "Não-dígito/letra/hífen na entrada"
+
+#: lib/strerror-idna.c:98
+msgid "Forbidden leading or trailing minus sign (`-')"
+msgstr "Sinal de menus proibido no início ou ao final (\"-\")"
+
+#: lib/strerror-idna.c:102
+msgid "Output would be too large or too small"
+msgstr "Saída seria grande demais ou pequena demais"
+
+#: lib/strerror-idna.c:106
+msgid "Input does not start with ACE prefix (`xn--')"
+msgstr "Entrada não inicia com prefixo ACE (\"xn--\")"
+
+#: lib/strerror-idna.c:110
+msgid "String not idempotent under ToASCII"
+msgstr "String não idempotente sob ToASCII"
+
+#: lib/strerror-idna.c:114
+msgid "Input already contain ACE prefix (`xn--')"
+msgstr "Entrada já contém prefixo ACE (\"xn--\")"
+
+#: lib/strerror-idna.c:118 lib/strerror-tld.c:84
+msgid "System iconv failed"
+msgstr "iconv do sistema falhou"
+
+#: lib/strerror-idna.c:122 lib/strerror-stringprep.c:130 lib/strerror-tld.c:80
+msgid "Cannot allocate memory"
+msgstr "Não foi possível alocar memória"
+
+#: lib/strerror-idna.c:126
+msgid "System dlopen failed"
+msgstr "dlopen de sistema falhou"
+
+#: lib/strerror-idna.c:130 lib/strerror-pr29.c:78 lib/strerror-punycode.c:82
+#: lib/strerror-stringprep.c:134 lib/strerror-tld.c:92
+msgid "Unknown error"
+msgstr "Erro desconhecido"
+
+#: lib/strerror-pr29.c:70
+msgid "String not idempotent under Unicode NFKC normalization"
+msgstr "String não idempotente sob normalização Unicode NFKC"
+
+#: lib/strerror-punycode.c:70
+msgid "Invalid input"
+msgstr "Entrada inválida"
+
+#: lib/strerror-punycode.c:74 lib/strerror-stringprep.c:110
+msgid "Output would exceed the buffer space provided"
+msgstr "Saída excederia o espaço de buffer fornecido"
+
+#: lib/strerror-punycode.c:78
+msgid "String size limit exceeded"
+msgstr "Limite do tamanho da string excedido"
+
+#: lib/strerror-stringprep.c:90
+msgid "Forbidden unassigned code points in input"
+msgstr "Pontos de código não-atribuídos proibidos na entrada"
+
+#: lib/strerror-stringprep.c:94
+msgid "Prohibited code points in input"
+msgstr "Pontos de código proibidos na entrada"
+
+#: lib/strerror-stringprep.c:98
+msgid "Conflicting bidirectional properties in input"
+msgstr "Propriedades bidirecionais conflitando na entrada"
+
+#: lib/strerror-stringprep.c:102
+msgid "Malformed bidirectional string"
+msgstr "String bidirecional malformada "
+
+#: lib/strerror-stringprep.c:106
+msgid "Prohibited bidirectional code points in input"
+msgstr "Pontos de código bidirecionais proibidos na entrada"
+
+#: lib/strerror-stringprep.c:114
+msgid "Error in stringprep profile definition"
+msgstr "Erro ma definição de perfil de stringprep"
+
+#: lib/strerror-stringprep.c:118
+msgid "Flag conflict with profile"
+msgstr "Opção conflita com o perfil"
+
+#: lib/strerror-stringprep.c:122
+msgid "Unknown profile"
+msgstr "Perfil desconhecido"
+
+#: lib/strerror-stringprep.c:126
+msgid "Unicode normalization failed (internal error)"
+msgstr "Normalização de unicode falhou (erro interno)"
+
+#: lib/strerror-tld.c:72
+msgid "Code points prohibited by top-level domain"
+msgstr "Pontos de código proibidos pelo domínio de topo"
+
+#: lib/strerror-tld.c:76
+msgid "Missing input"
+msgstr "Entrada faltando"
+
+#: lib/strerror-tld.c:88
+msgid "No top-level domain found in input"
+msgstr "Nenhum domínio de topo encontrado na entrada"
+
+#: src/idn.c:65
+#, c-format
+msgid "Try `%s --help' for more information.\n"
+msgstr "Tente \"%s --help\" para mais informações.\n"
+
+#: src/idn.c:69
+#, c-format
+msgid "Usage: %s [OPTION]... [STRINGS]...\n"
+msgstr "Uso: %s [OPÇÃO]... [STRINGS]...\n"
+
+#: src/idn.c:72
+msgid ""
+"Internationalized Domain Name (IDN) convert STRINGS, or standard input.\n"
+"\n"
+msgstr ""
+"Nome de domínio internacionalizado (IDN) para conversão de STRINGS ou entrada padrão.\n"
+"\n"
+
+#: src/idn.c:76
+msgid ""
+"Command line interface to the internationalized domain name library.\n"
+"\n"
+"All strings are expected to be encoded in the preferred charset used\n"
+"by your locale.  Use `--debug' to find out what this charset is.  You\n"
+"can override the charset used by setting environment variable CHARSET.\n"
+"\n"
+"To process a string that starts with `-', for example `-foo', use `--'\n"
+"to signal the end of parameters, as in `idn --quiet -a -- -foo'.\n"
+"\n"
+"Mandatory arguments to long options are mandatory for short options too.\n"
+msgstr ""
+"Interface de linha de comando para a biblioteca de nome de domínio\n"
+"internacionalizado.\n"
+"\n"
+"Espera-se que todas as strings estejam codificados no conjunto de caracteres\n"
+"preferidos usado pelo seu locale. Use \"--debug\" para descobrir qual é esse\n"
+"conjunto de caracteres. Você pode sobrescrever o conjunto de caracteres usado\n"
+"definindo a variável de ambiente CHARSET.\n"
+"\n"
+"Para processar string que inicie com \"-\", por exemplo \"-foo\", use \"--\"\n"
+"para sinal no fim de parâmetros, como em \"idn --quiet -a -- -foo\".\n"
+"\n"
+"Argumentos obrigatórios para opções longas são também são para as curtas.\n"
+
+#: src/idn.c:88
+msgid ""
+"  -h, --help               Print help and exit\n"
+"  -V, --version            Print version and exit\n"
+msgstr ""
+"  -h, --help               Mostra ajuda e sai\n"
+"  -V, --version            Mostra versão e sai\n"
+
+#: src/idn.c:92
+msgid ""
+"  -s, --stringprep         Prepare string according to nameprep profile\n"
+"  -d, --punycode-decode    Decode Punycode\n"
+"  -e, --punycode-encode    Encode Punycode\n"
+"  -a, --idna-to-ascii      Convert to ACE according to IDNA (default mode)\n"
+"  -u, --idna-to-unicode    Convert from ACE according to IDNA\n"
+msgstr ""
+"  -s, --stringprep         Prepara string de acordo com o perfil nameprep\n"
+"  -d, --punycode-decode    Decodifica Punycode\n"
+"  -e, --punycode-encode    Codifica Punycode\n"
+"  -a, --idna-to-ascii      Converte para ACE de acordo com IDNA (padrão)\n"
+"  -u, --idna-to-unicode    Converte de ACE de acordo com IDNA\n"
+
+#: src/idn.c:99
+msgid ""
+"      --allow-unassigned   Toggle IDNA AllowUnassigned flag (default off)\n"
+"      --usestd3asciirules  Toggle IDNA UseSTD3ASCIIRules flag (default off)\n"
+msgstr ""
+"      --allow-unassigned   Ativa opção IDNA AllowUnassigned (padrão é off)\n"
+"      --usestd3asciirules  Ativa opção IDNA UseSTD3ASCIIRules (padrão é off)\n"
+
+#: src/idn.c:103
+msgid ""
+"      --no-tld             Don't check string for TLD specific rules\n"
+"                             Only for --idna-to-ascii and --idna-to-unicode\n"
+msgstr ""
+"      --no-tld             Não verifica string por regras específicas de TLD\n"
+"                             Apenas por --idna-to-ascii e --idna-to-unicode\n"
+
+#: src/idn.c:107
+msgid "  -n, --nfkc               Normalize string according to Unicode v3.2 NFKC\n"
+msgstr "  -n, --nfkc               Normaliza string de acordo com Unicode v3.2 NFKC\n"
+
+#: src/idn.c:110
+msgid ""
+"  -p, --profile=STRING     Use specified stringprep profile instead\n"
+"                             Valid stringprep profiles: `Nameprep',\n"
+"                             `iSCSI', `Nodeprep', `Resourceprep', \n"
+"                             `trace', `SASLprep'\n"
+msgstr ""
+"  -p, --profile=STRING     Usa o perfil de stringprep especificado\n"
+"                             Perfis stringprep válidos: \"Nameprep\",\n"
+"                             \"iSCSI\", \"Nodeprep\", \"Resourceprep\", \n"
+"                             \"trace\", \"SASLprep\"\n"
+
+#: src/idn.c:116
+msgid ""
+"      --debug              Print debugging information\n"
+"      --quiet              Silent operation\n"
+msgstr ""
+"      --debug              Mostra informações de depuração\n"
+"      --quiet              Operação silenciosa\n"
+
+#: src/idn.c:172
+#, c-format
+msgid "only one of -s, -e, -d, -a, -u or -n can be specified"
+msgstr "apenas um entre -s, -e, -d, -a, -u ou -n pode ser especificado"
+
+#: src/idn.c:182
+#, c-format
+msgid "Charset `%s'.\n"
+msgstr "Codificação de caracteres \"%s\".\n"
+
+#: src/idn.c:187
+#, c-format
+msgid "Type each input string on a line by itself, terminated by a newline character.\n"
+msgstr "Digite cada string de entrada em uma linha, terminada por um caractere de linha nova.\n"
+
+#: src/idn.c:202
+#, c-format
+msgid "input error"
+msgstr "erro na entrada"
+
+#: src/idn.c:212 src/idn.c:274 src/idn.c:357 src/idn.c:434 src/idn.c:515
+#, c-format
+msgid "could not convert from %s to UTF-8"
+msgstr "não foi possível converter de %s para UTF-8"
+
+#: src/idn.c:220 src/idn.c:245 src/idn.c:281 src/idn.c:498 src/idn.c:527
+#: src/idn.c:551
+#, c-format
+msgid "could not convert from UTF-8 to UCS-4"
+msgstr "não foi possível converter de UTF-8 para UCS-4"
+
+#: src/idn.c:237
+#, c-format
+msgid "stringprep_profile: %s"
+msgstr "stringprep_profile: %s"
+
+#: src/idn.c:260 src/idn.c:302 src/idn.c:345 src/idn.c:503 src/idn.c:564
+#, c-format
+msgid "could not convert from UTF-8 to %s"
+msgstr "não foi possível converter de UTF-8 para %s"
+
+#: src/idn.c:295
+#, c-format
+msgid "punycode_encode: %s"
+msgstr "punycode_encode: %s"
+
+#: src/idn.c:317
+msgid "malloc"
+msgstr "malloc"
+
+#: src/idn.c:323
+#, c-format
+msgid "punycode_decode: %s"
+msgstr "punycode_decode: %s"
+
+#: src/idn.c:340 src/idn.c:364 src/idn.c:442
+#, c-format
+msgid "could not convert from UCS-4 to UTF-8"
+msgstr "não foi possível converter de UCS-4 para UTF-8"
+
+#: src/idn.c:381
+#, c-format
+msgid "idna_to_ascii_4z: %s"
+msgstr "idna_to_ascii_4z: %s"
+
+#: src/idn.c:395
+#, c-format
+msgid "idna_to_unicode_8z4z (TLD): %s"
+msgstr "idna_to_unicode_8z4z (TLD): %s"
+
+#: src/idn.c:409 src/idn.c:482
+#, c-format
+msgid "tld_check_4z (position %lu): %s"
+msgstr "tld_check_4z (posição %lu): %s"
+
+#: src/idn.c:412 src/idn.c:488
+#, c-format
+msgid "tld_check_4z: %s"
+msgstr "tld_check_4z: %s"
+
+#: src/idn.c:461
+#, c-format
+msgid "idna_to_unicode_8z4z: %s"
+msgstr "idna_to_unicode_8z4z: %s"
+
+#: src/idn.c:540
+#, c-format
+msgid "could not do NFKC normalization"
+msgstr "não foi possível fazer normalização NFKC"
